fix: padding needed for image/text spacing

--- a/F-layout/css/style.css
+++ b/F-layout/css/style.css
@@ -106,6 +106,7 @@ body {
 
 img{
     float: left;
+    padding-right:10px;
 }
 
 #footer{
